--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.3",
     "classnames": "^2.2.6",
+    "mdx.macro": "^0.2.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet-async": "^1.0.7",
