--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet-async": "^1.0.7",
+    "react-loadable": "^5.5.0",
     "react-scripts": "3.4.3",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.0",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-loadable": "^5.5.4",
     "@types/react-transition-group": "^4.4.0",
     "commitizen": "^4.2.1",
     "cz-conventional-changelog": "3.3.0",
