--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,11 @@
     "noEmit": true,
     "jsx": "react"
   },
+  "paths": {
+    "@/*": [
+      "src/*"
+    ]
+  },
   "include": [
     "src"
   ]
