--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.3",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.21",
     "mdx.macro": "^0.2.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.172",
     "@types/react-loadable": "^5.5.4",
     "@types/react-transition-group": "^4.4.0",
     "commitizen": "^4.2.1",
